project('slow_receiver', 'c', default_options: ['c_std=gnu99'])

executable('slow_receiver', ['src/slow_receiver.c'])
executable('blocking_sender', ['src/blocking_sender.c'])
executable('nonblocking_sender', ['src/nonblocking_sender.c'])
executable('nonblocking_poll_sender', ['src/nonblocking_poll_sender.c'])

